@@ -281,7 +281,7 @@ $table->head[4] = __('Op.');
 $table->style = array ();
 $table->style[0] = 'font-weight: bold';
 $table->size = array ();
-$table->size[4] = '65px';
+$table->size[4] = '85px';
 $table->align = array ();
 $table->align[1] = 'center';
 $table->align[4] = 'center';
